--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.1",
     "node-network-manager": "^1.0.9",
     "node-wifi": "^2.0.16",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "tailwindcss": "^3.1.8"
   }
 }
