--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "js-sha256": "^0.9.0",
     "node-network-manager": "^1.0.9",
     "node-wifi": "^2.0.16",
     "nodemon": "^2.0.20",
